[package]
name = "rpalib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
encoding = "0.2.33"
flate2 = "1.0.24"
log = "0.4.17"
serde = "1.0.143"
serde-pickle = "1.1.1"
