[package]
name = "warpa"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
glob = "0.3.0"
log = "0.4.17"
memmap2 = "0.5.8"
rayon = "1.6.1"
simplelog = "0.12.0"

[dependencies.warpalib]
version = "0.3.1"
path = "../warpalib"
features = ["glob"]
