[package]
name = "warpalib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding = "0.2.33"
flate2 = "1.0.24"
log = "0.4.17"
serde = "1.0.143"
serde-pickle = "1.1.1"
thiserror = "1.0.32"

[dev-dependencies]
criterion = { version = "0.3.6", features = ["html_reports"] }

[[bench]]
name = "archive"
harness = false

[[bench]]
name = "index"
harness = false