[package]
name = "warpalib"
version = "0.3.1"
edition = "2021"

authors = ["Mensch272 <mhaisham79>"]
license = "MIT"

description = "An unopiniated api for parsing renpy archives"
documentation = "https://docs.rs/warpalib"
homepage = "https://github.com/mensch272/warpa#readme"
repository = "https://github.com/mensch272/warpa"
readme = "README.md"
keywords = ["renpy", "archive", "rpa"]
categories = ["compression", "encoding"]

[dependencies]
flate2 = "1.0.25"
log = "0.4.17"
serde = "1.0.150"
serde-pickle = "1.1.1"
thiserror = "1.0.37"

# Optional.
glob = { version = "0.3.0", optional = true }

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[features]
glob = ["dep:glob"]

[[bench]]
name = "archive"
harness = false

[[bench]]
name = "record"
harness = false

[[example]]
name = "add_file"

[[example]]
name = "modify_archive"
